adding total expense future

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <selection class="form">
           <form id="formExpense">
             <input type="text" placeholder="Expense" id="expenseBtn" />
-            <input type="text" placeholder="Amount" id="amountBtn" />
+            <input type="number" placeholder="Amount" id="amountBtn" />
             <input type="date" placeholder="Date" id="dateBtn" />
-            <select placeholder="payment" id="optionsBtn">
+            <select id="optionsBtn">
               <option value="Card">Card</option>
               <option value="Cash">Cash</option>
               <h3 id="message">Show the message</h3>
